# mcqaRAG_viettel_ai_race

./: .env.example  .gitignore  Dockerfile  Makefile  OLLAMA_DISABLED_GUIDE.md  README.md  ask.ipynb  docker-compose.yml  ollamacpp.txt  pyproject.toml  run.ipynb  run_extract.ipynb  run_inference.ipynb  run_mcq_system.py  run_mcq_system_save.py  setup.sh  source_code.py  test.ipynb
airflow/: Dockerfile  entrypoint.sh  requirements.txt
airflow/dags/: pdf_ingestion_dag.py
data/: process_answer.py  question.csv
notebooks/: README.md  USAGE_GUIDE.md
post_processing/: process_header.py  process_table.py  write_answers.py
private_test_output/: Public_427.md  Public_428.md  Public_441.md  Public_442.md  Public_444.md  Public_445.md  Public_446.md  Public_447.md  Public_448.md  Public_449.md  Public_465.md  Public_466.md  Public_468.md  Public_469.md  Public_470.md  Public_471.md  Public_472.md  Public_473.md  Public_474.md  Public_624.md  Public_626.md  Public_634.md  Public_635.md  Public_636.md  Public_637.md  Public_638.md  Public_639.md  Public_640.md  Public_641.md  Public_642.md  Public_643.md  Public_644.md  Public_645.md  Public_646.md  Public_647.md  Public_648.md  Public_649.md  Public_650.md  Public_651.md  Public_652.md  (+18 more)
private_test_output_html/: Public_444.md  Public_445.md  Public_446.md  Public_449.md  Public_465.md  Public_468.md  Public_470.md  Public_472.md  Public_635.md  Public_636.md  Public_641.md  Public_648.md  Public_651.md  Public_655.md  Public_660.md  Public_669.md  Public_673.md
src/: __init__.py  config.py  main.py
src/db/: session.py
src/models/: document.py
src/routers/: ask.py  health.py  search.py
src/schemas/: api.py
src/services/: factories.py
src/services/chunking/: text_chunker.py
src/services/embeddings/: sentence_transformer.py
src/services/llamacpp/: llamacpp_client.py
src/services/ollama/: client.py  entrypoint.sh
src/services/opensearch/: client.py
src/services/pdf_parser/: __init__.py  docling_parser.py  factory.py
src/services/rag/: pipeline.py
