[project]
name = "rag-mcq-system"
version = "0.1.0"
description = "Production RAG system for multiple choice questions answering"
authors = [
    {name = "Do Hai Nam", email = "dohainam@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Notebook
    "ipykernel>=7.1.0",

    # Core dependencies
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",

    # PDF processing with Docling
    "docling>=1.0.0",
    "docling-core>=1.0.0",

    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",

    # OpenSearch
    "opensearch-py>=3.0.0",

    # Embeddings and NLP
    "sentence-transformers>=2.2.2",
    "transformers>=4.36.0",
    "torch>=2.1.0",

    # Search
    "rank-bm25>=0.2.2",
    "numpy>=1.24.3",

    # LLM integration
    "ollama>=0.1.6",

    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Workflow orchestration
    "apache-airflow>=2.8.0",

    # Utilities
    "tqdm>=4.66.1",
    "pandas>=2.1.4",
    "httpx>=0.26.0",

    # Monitoring and caching
    "redis>=5.0.1",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.6",
    "ipykernel>=6.28.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
